# loeric

./: .gitignore  .readthedocs.yaml  Pipfile  README.rst  a2m_examples.sh  accordion.json  action_log.csv  compile.sh  conf.json  generate.sh  infinite.py  loeric.py  loeric_1.json  loeric_2.json  loeric_3.json  mini-session.sh  playset.sh  pyproject.toml  requirements.txt  rosie.json  shell.json  test.json  test.py  test.sh  test_2.json  values_log.csv
client/: package-lock.json  package.json  svelte.config.js  vite.config.ts
client/src/: app.css  app.html
configs/: accordion.json  conf.json  flute.json  infinite.json  new_conf.json  original_loeric.json  violin.json
docs/: docs-requirements.txt
docs/source/: api.rst  conf.py  functioning.rst  index.rst  usage.rst
loeric/: __init__.py  __main__.py  conf.json  contour.py  groover.py  loeric.py  loeric_utils.py  player.py  tune.py
loeric-env/: pyvenv.cfg
loeric/nebula/: affect.py  hivemind.py  listener.py  nebulaAI.py
mini_session/: accordion.json  flute.json  violin.json
paper_examples/jigs/: conf.json
paper_examples/rambles/: conf.json
paper_examples/reels/: conf.json
paper_examples/slides/: conf.json
scripts/: fake_midi_control.py  midi_velocity_listener.py  playalong-ai.py  playalong.py
src/: infinite.py  notes.txt  requirements.txt
src/config_maker/: base.json
src/configs/: all_parameters.json  conf.json  flute.json  infinite.json  jigs.json  larry.json  loeric_A.json  loeric_B.json  new_conf.json  original_loeric.json  reels.json  shell.json  test.json
src/loeric/: __main__.py  tune.py  (+6 more)
(+86 files in other folders)
