[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "loeric"
authors = [{name = "Marco Amerotti", email = "amerotti@kth.se"}]
dynamic = ["version", "description"]
[tool.setuptools.dynamic]
version = {attr = "loeric.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
loeric = "loeric.__main__:main" 
loeric-config = "loeric.loeric_config.loeric_config:main"
loeric-listen = "loeric.listeners.playalong:main"
